add deploy stage to build-ci.yml and add variable name for INSTANCE_IP_ADDRESS

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -33,3 +33,5 @@ jobs:
         with:
           config-file: cypress.config.js
           start: npm run start:ci
+      - name: Deploy
+        run: ./scripts/deploy-to-instance.sh
