add to pipeline to give permissions to deploy-to-instance.sh script

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -34,4 +34,6 @@ jobs:
           config-file: cypress.config.js
           start: npm run start:ci
       - name: Deploy
-        run: ./scripts/deploy-to-instance.sh
+        run: |
+          chmod +x ./scripts/deploy-to-instance.sh
+          ./scripts/deploy-to-instance.sh
