--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -35,5 +35,5 @@ jobs:
           start: npm run start:ci
       - name: Deploy
         run: |
-          chmod +x ./scripts/deploy-to-instance.sh
+          npm run build
           ./scripts/deploy-to-instance.sh
