--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -15,6 +15,8 @@ jobs:
         options: --name=mongodb
     env:
       MONGODB_URL: mongodb://localhost:27017/acebook_test
+      INSTANCE_IP_ADDRESS: {{ vars.INSTANCE_IP_ADDRESS }}
+      SSH_PRIVATE_KEY: {{ vars.SSH_PRIVATE_KEY }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
