--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: deployment
     services:
       mongodb:
         image: mongo:latest
@@ -15,9 +16,13 @@ jobs:
         options: --name=mongodb
     env:
       MONGODB_URL: mongodb://localhost:27017/acebook_test
-      INSTANCE_IP_ADDRESS: {{ vars.INSTANCE_IP_ADDRESS }}
-      SSH_PRIVATE_KEY: {{ vars.SSH_PRIVATE_KEY }}
+      # INSTANCE_IP_ADDRESS: {{ vars.INSTANCE_IP_ADDRESS }}
+      # SSH_PRIVATE_KEY: {{ vars.SSH_PRIVATE_KEY }}
     steps:
+      - name: Check variables
+        run: |
+          echo "$SSH_PRIVATE_KEY"
+          echo "$INSTANCE_IP_ADDRESS"
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Set up Node.js
