--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Check variables
         run: |
           echo "My SSH key is ${{ vars.SSH_PRIVATE_KEY }}"
-          echo ""My SSH key is ${{ vars.INSTANCE_IP_ADDRESS }}"
+          echo "My IP Address is ${{ vars.INSTANCE_IP_ADDRESS }}"
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Set up Node.js
