check the env variables can be echoed out

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
       - name: Check variables
         run: |
-          echo "My SSH key is ${{ vars.SSH_PRIVATE_KEY }}"
-          echo "My IP Address is ${{ vars.INSTANCE_IP_ADDRESS }}"
+          echo "My SSH key is ${{ env.SSH_PRIVATE_KEY }}"
+          echo "My IP Address is ${{ env.INSTANCE_IP_ADDRESS }}"
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Set up Node.js
