--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -17,13 +17,11 @@ jobs:
     env:
       MONGODB_URL: mongodb://localhost:27017/acebook_test
       INSTANCE_IP_ADDRESS: ${{ vars.INSTANCE_IP_ADDRESS }}
-      SSH_PRIVATE_KEY: ${{ vars.SSH_PRIVATE_KEY }}
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
     steps:
       - name: Check variables
         run: |
-          echo "My SSH key is ${{ env.SSH_PRIVATE_KEY }}"
           echo "My SSH key is $SSH_PRIVATE_KEY"
-          echo "My IP Address is ${{ env.INSTANCE_IP_ADDRESS}}"
           echo "My IP Address is $INSTANCE_IP_ADDRESS"
       - name: Checkout code
         uses: actions/checkout@v3
