--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: deployment
     services:
       mongodb:
         image: mongo:latest
@@ -16,13 +15,15 @@ jobs:
         options: --name=mongodb
     env:
       MONGODB_URL: mongodb://localhost:27017/acebook_test
-      INSTANCE_IP_ADDRESS: ${{ vars.INSTANCE_IP_ADDRESS }}
+      INSTANCE_IP_ADDRESS_1: ${{ vars.INSTANCE_IP_ADDRESS_1 }}
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      INSTANCE_IP_ADDRESS_2: ${{ vars.INSTANCE_IP_ADDRESS_2 }}
     steps:
       - name: Check variables
         run: |
           echo "My SSH key is $SSH_PRIVATE_KEY"
-          echo "My IP Address is $INSTANCE_IP_ADDRESS"
+          echo "My IP Address 1 is $INSTANCE_IP_ADDRESS_1"
+          echo "My IP Address 2 is $INSTANCE_IP_ADDRESS_2"
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Set up Node.js
